--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&family=Rubik:wght@300;400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:wght@200;300;400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&family=Montserrat:wght@200;300;400;500;600;700;800;900&display=swap");
 html {
   box-sizing: border-box;
-  background-color: #F2F2F2;
 }
 
 *::-webkit-backdrop {
@@ -18,12 +21,12 @@ h2,
 h3,
 h4,
 h5,
-h6.p {
+h6, p {
   margin: 0;
 }
 
 ul,
-ol {
+ol, p {
   padding: 0;
   margin: 0;
   list-style: none;
@@ -43,12 +46,467 @@ img {
 
 body {
   margin: 0;
-  font-family: "Barlow";
 }
 
 .container {
-  max-width: 1320px;
+  max-width: 1300px;
   margin: 0 auto;
   padding-left: 20px;
   padding-right: 20px;
+}
+
+.header__container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-left: 25px;
+  padding-top: 20px;
+}
+
+.header__darc {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 19.2px;
+}
+
+.header__mode {
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+}
+
+#sarche {
+  width: 670px;
+  height: 48px;
+  background: #f8fafd;
+  border: none;
+  outline: none;
+  font-family: "Rubik";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 13px;
+  line-height: 15px;
+  color: #212121;
+  border-radius: 30px;
+}
+
+.header__input {
+  background: #f8fafd;
+  box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.1);
+  color: rgba(0, 0, 0, 0.24);
+  border-radius: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+}
+
+.header__logo {
+  width: 99px;
+  height: 40px;
+  background: #0d75ff;
+  border-radius: 4px;
+  font-family: "Rubik";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  color: #ffffff;
+  border: none;
+}
+
+.header__search {
+  width: 42px;
+  height: 20px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  padding-left: 20px;
+}
+
+.btn:hover {
+  background-color: blue;
+  color: #ffffff;
+}
+
+.header__showing {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 40px;
+  height: 56px;
+  margin-top: 11px;
+  background: #FFFFFF;
+}
+
+.header__text {
+  font-family: "Rubik";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 17px;
+  color: #222531;
+  padding-left: 306px;
+}
+
+.header__conta {
+  background: #ffffff;
+  padding: 0;
+}
+
+.header__Order {
+  position: relative;
+  font-family: "Rubik";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 17px;
+  color: #ffffff;
+  height: 34px;
+  background: #a6b0c3;
+  border-radius: 4px;
+  border: none;
+  padding-left: 35px;
+}
+
+.header__Order::after {
+  content: "";
+  position: absolute;
+  left: 10px;
+  bottom: 2px;
+  width: 22px;
+  height: 30px;
+  background-image: url(../../img/calendar.png);
+  background-repeat: no-repeat;
+}
+
+.main__section {
+  margin-top: 2px;
+  width: 268px;
+  background: #ffffff;
+  box-shadow: 0px 3px 2px rgba(0, 0, 0, 0.1);
+  padding-left: 20px;
+}
+
+.img {
+  width: 24px;
+  height: 24px;
+}
+
+.main__section__sitey {
+  margin-top: 25px;
+}
+
+.item {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 218px;
+  height: 72px;
+  background: #f8fafd;
+  border-radius: 4px;
+  padding: 0 11px 0 10px;
+}
+
+.book {
+  font-family: "Rubik";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 28px;
+  color: #000000;
+  margin-bottom: 5px;
+  margin-top: 27px;
+}
+
+.main__section__text {
+  font-family: "Rubik";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 155.6%;
+  color: #000000;
+}
+
+.item__text {
+  font-family: "Rubik";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  color: #000000;
+}
+
+.item__name {
+  font-family: "Noto Sans";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 13px;
+  line-height: 18px;
+  color: #757881;
+}
+
+.item,
+.item {
+  margin-top: 15px;
+}
+
+.main__cretElement__img {
+  width: 249px;
+  margin: 0 auto;
+  height: 238px;
+  background: #f8fafd;
+  border-radius: 5px;
+  padding: 18px 24px;
+}
+
+.main {
+  display: flex;
+  gap: 39px;
+  background: #e5e5e5;
+}
+
+.cretElement__inner {
+  font-family: "Rubik";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 21px;
+  color: #000000;
+  margin-top: 19px;
+}
+
+.cretElement__taxt {
+  font-family: "Noto Sans";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 13px;
+  line-height: 18px;
+  color: #757881;
+  margin-top: 3px;
+}
+
+.cretElement__namber {
+  font-family: "Noto Sans";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 13px;
+  line-height: 18px;
+  color: #757881;
+  margin-bottom: 10px;
+}
+
+.main__section2 {
+  margin-top: 40px;
+}
+
+.main__cretElement {
+  width: 282px;
+  height: 431px;
+  background: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+  padding: 13px 0 0 0;
+}
+
+.main__inner {
+  margin-left: 25px;
+}
+
+.main__bookmark {
+  width: 120px;
+  height: 37px;
+  border: none;
+  background: #ffd80d;
+  border-radius: 4px;
+  font-family: "Rubik";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 17px;
+  color: #000000;
+  margin-bottom: 5px;
+}
+
+.main__more {
+  border: none;
+  width: 120px;
+  height: 37px;
+  background: rgba(13, 117, 255, 0.05);
+  border-radius: 4px;
+  font-family: "Rubik";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 17px;
+  color: #0d75ff;
+  margin-bottom: 5px;
+}
+
+.main__btn__more {
+  display: flex;
+  align-items: center;
+  gap: 3px;
+  width: 246px;
+  margin: 0 auto;
+}
+
+.main__read {
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 246px;
+  height: 37px;
+  margin-top: 5px;
+  background: #75828a;
+  border-radius: 4px;
+  font-family: "Rubik";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 17px;
+  color: #ffffff;
+  border: none;
+}
+
+.cretElement {
+  display: flex;
+  align-items: center;
+  gap: 33px;
+  flex-wrap: wrap;
+}
+
+.info__img {
+  width: 228.96px;
+  height: 299.59px;
+  border-radius: 5px;
+  margin-top: 45px;
+}
+
+.offcanvas-title {
+  font-family: "Rubik";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 28px;
+  color: #222531;
+}
+
+.info__img_inner {
+  text-align: center;
+}
+
+.info__taxt {
+  width: 350px;
+  margin: 0 auto;
+  font-family: "Rubik";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 13px;
+  line-height: 170.3%;
+  color: #58667e;
+  margin-top: 51px;
+}
+
+.info__inner {
+  font-family: "Rubik";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 17px;
+  color: #222531;
+}
+
+.info__inner, .info__inner {
+  margin-top: 40px;
+}
+
+.info__span {
+  padding: 11px 20px;
+  background: rgba(13, 117, 255, 0.09);
+  border-radius: 30px;
+  font-family: "Rubik";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 17px;
+  color: #0D75FF;
+}
+
+.body {
+  background-image: url(../../img/Login.png);
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  margin-top: 148px;
+}
+
+.continer__img {
+  width: 226px;
+  height: 44px;
+  margin: 0 auto;
+}
+
+.container__input {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 20px;
+  margin-top: 51px;
+}
+
+.input {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 20px;
+  text-align: center;
+  text-transform: uppercase;
+  color: #ffffff;
+  background: fixed;
+  border: none;
+  outline: none;
+}
+
+.input__password {
+  width: 300px;
+  height: 45px;
+  border: 1px solid #ffffff;
+  display: flex;
+  align-items: center;
+  padding-left: 16px;
+}
+
+.input__text {
+  width: 300px;
+  height: 45px;
+  border: 1px solid #ffffff;
+  display: flex;
+  align-items: center;
+  padding-left: 16px;
+}
+
+.input__btn {
+  background: #ffffff;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.3);
+  border-radius: 4px;
+  width: 300px;
+  height: 45px;
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 20px;
+  text-align: center;
+  text-transform: uppercase;
+  color: #0d75ff;
+  margin-top: 23px;
+}
+
+.user {
+  width: 20px;
+  height: 20px;
 }/*# sourceMappingURL=main.css.map */
