--- a/css/main.css
+++ b/css/main.css
@@ -40,8 +40,6 @@ a {
 img {
   width: 100%;
   height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
 }
 
 body {
@@ -61,6 +59,10 @@ body {
   justify-content: space-between;
   padding-left: 25px;
   padding-top: 20px;
+}
+
+.body-dark, * {
+  color: #fff;
 }
 
 .header__darc {
@@ -180,12 +182,19 @@ body {
   background-repeat: no-repeat;
 }
 
+#sun {
+  display: none;
+}
+
 .main__section {
   margin-top: 2px;
   width: 268px;
   background: #ffffff;
   box-shadow: 0px 3px 2px rgba(0, 0, 0, 0.1);
-  padding-left: 20px;
+}
+
+.offcanvas.show:not(.hiding), .offcanvas.showing {
+  width: 552.47px;
 }
 
 .img {
@@ -235,15 +244,21 @@ body {
   font-size: 16px;
   line-height: 19px;
   color: #000000;
+  width: 130px;
+  height: 22px;
+  overflow: hidden;
 }
 
 .item__name {
+  width: 130px;
   font-family: "Noto Sans";
   font-style: normal;
   font-weight: 500;
   font-size: 13px;
   line-height: 18px;
   color: #757881;
+  height: 20px;
+  overflow: hidden;
 }
 
 .item,
@@ -274,6 +289,8 @@ body {
   line-height: 21px;
   color: #000000;
   margin-top: 19px;
+  height: 44px;
+  overflow: hidden;
 }
 
 .cretElement__taxt {
@@ -302,11 +319,10 @@ body {
 
 .main__cretElement {
   width: 282px;
-  height: 431px;
   background: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1);
   border-radius: 5px;
-  padding: 13px 0 0 0;
+  padding: 13px 0 16px 0;
 }
 
 .main__inner {
@@ -391,15 +407,18 @@ body {
   font-size: 24px;
   line-height: 28px;
   color: #222531;
+  margin-left: 33.03px;
 }
 
 .info__img_inner {
   text-align: center;
 }
 
+.offcanvas-header {
+  background: #F8FAFD;
+}
+
 .info__taxt {
-  width: 350px;
-  margin: 0 auto;
   font-family: "Rubik";
   font-style: normal;
   font-weight: 400;
@@ -418,6 +437,10 @@ body {
   color: #222531;
 }
 
+.info__div {
+  margin-left: 46.7px;
+}
+
 .info__inner, .info__inner {
   margin-top: 40px;
 }
@@ -432,6 +455,10 @@ body {
   font-size: 14px;
   line-height: 17px;
   color: #0D75FF;
+}
+
+.bookmarks__div {
+  width: 220px;
 }
 
 .body {
