--- a/scss/_block/_main.scss
+++ b/scss/_block/_main.scss
@@ -3,7 +3,10 @@
   width: 268px;
   background: #ffffff;
   box-shadow: 0px 3px 2px rgba(0, 0, 0, 0.1);
-  padding-left: 20px;
+}
+
+.offcanvas.show:not(.hiding), .offcanvas.showing {
+  width: 552.47px;
 }
 
 .img {
@@ -50,17 +53,22 @@
   font-size: 16px;
   line-height: 19px;
   color: #000000;
+  width: 130px;
+  height: 22px;
+  overflow: hidden;
 }
 
 .item__name {
+  width: 130px;
   font-family: "Noto Sans";
   font-style: normal;
   font-weight: 500;
   font-size: 13px;
   line-height: 18px;
   color: #757881;
+  height: 20px;
+  overflow: hidden;
 }
-
 .item,
 .item {
   margin-top: 15px;
@@ -89,6 +97,8 @@
   line-height: 21px;
   color: #000000;
   margin-top: 19px;
+ height: 44px;
+  overflow:hidden
 }
 
 .cretElement__taxt {
@@ -117,12 +127,14 @@
 
 .main__cretElement {
   width: 282px;
-  height: 431px;
   background: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1);
   border-radius: 5px;
-  padding: 13px 0 0 0;
+  padding: 13px 0 16px 0;
+
 }
+
+
 
 .main__inner {
   margin-left: 25px;
@@ -202,15 +214,18 @@
   font-size: 24px;
   line-height: 28px;
   color: #222531;
+  margin-left: 33.03px;
 }
 
 .info__img_inner {
   text-align: center;
 }
 
+.offcanvas-header {
+  background: #F8FAFD;
+}
+
 .info__taxt {
-  width: 350px;
-  margin: 0 auto;
   font-family: "Rubik";
   font-style: normal;
   font-weight: 400;
@@ -228,6 +243,9 @@
   line-height: 17px;
   color: #222531;
 }
+.info__div{
+ margin-left: 46.7px;
+}
 
 .info__inner ,.info__inner {
   margin-top: 40px;
@@ -243,4 +261,9 @@ font-weight: 400;
 font-size: 14px;
 line-height: 17px;
 color: #0D75FF;
+}
+
+
+.bookmarks__div{
+  width: 220px;
 }
