--- a/scss/_block/_logo.scss
+++ b/scss/_block/_logo.scss
@@ -55,6 +55,8 @@
 }
 
 .input__btn {
+  overflow: hidden;
+  border: none;
   background: #ffffff;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.3);
   border-radius: 4px;
@@ -76,3 +78,4 @@
     height: 20px;
    
 }
+
