--- a/css/main.css
+++ b/css/main.css
@@ -137,7 +137,8 @@ body {
   justify-content: space-between;
   gap: 40px;
   height: 56px;
-  margin-top: 11px;
+  margin-top: 50px;
+  padding-bottom: 10px;
   background: #FFFFFF;
 }
 
@@ -184,6 +185,36 @@ body {
 
 #sun {
   display: none;
+}
+
+.swiper-wrapper {
+  text-align: center;
+}
+
+.swiper-slide-img {
+  width: 100%;
+  height: 500px;
+  border-radius: 20px;
+}
+
+.option {
+  color: #000;
+  border: none;
+  background: #0d75ff;
+  overflow: #0d75ff;
+  border-radius: 8px;
+}
+
+.input__select {
+  color: #000;
+  border: none;
+  overflow: #0d75ff;
+  background: #0d75ff;
+  border-radius: 8px;
+}
+
+.select__div {
+  display: flex;
 }
 
 .main__section {
@@ -461,6 +492,21 @@ body {
   width: 220px;
 }
 
+.pagination {
+  justify-content: center;
+  margin-top: 20px;
+  margin-bottom: 30px;
+  gap: 5px;
+}
+
+.page-item {
+  font-size: 20px;
+  border-radius: 15px;
+  background: #0D75FF;
+  color: #ffffff;
+  cursor: pointer;
+}
+
 .body {
   background-image: url(../../img/Login.png);
   width: 100%;
@@ -517,6 +563,8 @@ body {
 }
 
 .input__btn {
+  overflow: hidden;
+  border: none;
   background: #ffffff;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.3);
   border-radius: 4px;
