--- a/scss/_block/_header.scss
+++ b/scss/_block/_header.scss
@@ -80,7 +80,8 @@ padding-left: 25px;
   justify-content: space-between;
   gap: 40px;
   height: 56px;
-  margin-top: 11px;
+  margin-top: 50px;
+  padding-bottom: 10px;
   background: #FFFFFF;
 }
 
@@ -125,9 +126,38 @@ padding-left: 25px;
   background-repeat: no-repeat;
 }
 
-
-
 #sun{
   display: none;
 
+}
+.swiper-wrapper{
+  text-align: center;
+}
+
+.swiper-slide-img{
+  width:100%;
+  height: 500px;
+  border-radius: 20px;
+}
+
+.option{
+  color: #000;
+  border: none;
+  background: #0d75ff;
+  overflow: #0d75ff;
+  border-radius: 8px;
+}
+
+.input__select{
+  color: #000;
+  border: none;
+  overflow: #0d75ff;
+  background: #0d75ff;
+  border-radius: 8px;
+
+}
+
+
+.select__div{
+  display: flex;
 }
