--- a/css/main.css
+++ b/css/main.css
@@ -167,7 +167,6 @@ body {
   color: #ffffff;
   height: 34px;
   background: #a6b0c3;
-  border-radius: 4px;
   border: none;
   padding-left: 35px;
 }
@@ -198,19 +197,21 @@ body {
 }
 
 .option {
+  overflow: hidden;
   color: #000;
   border: none;
-  background: #0d75ff;
-  overflow: #0d75ff;
-  border-radius: 8px;
+  color: #ffffff;
+  height: 34px;
+  background: #a6b0c3;
 }
 
 .input__select {
+  overflow: hidden;
   color: #000;
   border: none;
-  overflow: #0d75ff;
-  background: #0d75ff;
-  border-radius: 8px;
+  color: #ffffff;
+  height: 34px;
+  background: #a6b0c3;
 }
 
 .select__div {
