--- a/scss/_block/_header.scss
+++ b/scss/_block/_header.scss
@@ -110,7 +110,6 @@ padding-left: 25px;
   color: #ffffff;
   height: 34px;
   background: #a6b0c3;
-  border-radius: 4px;
   border: none;
   padding-left: 35px;
 }
@@ -141,22 +140,23 @@ padding-left: 25px;
 }
 
 .option{
+  overflow: hidden;
   color: #000;
   border: none;
-  background: #0d75ff;
-  overflow: #0d75ff;
-  border-radius: 8px;
+  color: #ffffff;
+  height: 34px;
+  background: #a6b0c3;
 }
 
 .input__select{
+  overflow: hidden;
   color: #000;
   border: none;
-  overflow: #0d75ff;
-  background: #0d75ff;
-  border-radius: 8px;
+  color: #ffffff;
+  height: 34px;
+  background: #a6b0c3;
 
 }
-
 
 .select__div{
   display: flex;
