--- a/css/main.css
+++ b/css/main.css
@@ -70,6 +70,7 @@ body {
   align-items: center;
   justify-content: center;
   gap: 19.2px;
+  padding-left: 50px;
 }
 
 .header__mode {
@@ -79,7 +80,8 @@ body {
 }
 
 #sarche {
-  width: 670px;
+  max-width: 670px;
+  width: 100%;
   height: 48px;
   background: #f8fafd;
   border: none;
@@ -102,6 +104,7 @@ body {
   align-items: center;
   justify-content: center;
   gap: 20px;
+  width: 100%;
 }
 
 .header__logo {
@@ -140,6 +143,10 @@ body {
   margin-top: 50px;
   padding-bottom: 10px;
   background: #FFFFFF;
+}
+
+.ul-dark, * {
+  background-color: #fff;
 }
 
 .header__text {
@@ -218,6 +225,91 @@ body {
   display: flex;
 }
 
+#icon {
+  width: 226px;
+  height: 44px;
+  padding-right: 56px;
+}
+
+@media screen and (max-width: 850px) {
+  #icon {
+    padding-right: 40px;
+    width: 200px;
+  }
+  .header__darc {
+    padding-left: 35px;
+  }
+  .header__mode {
+    width: 25px;
+    height: 25px;
+  }
+  .header__logo {
+    width: 80px;
+    height: 35px;
+    font-size: 14px;
+  }
+}
+@media screen and (max-width: 650px) {
+  #icon {
+    padding-right: 30px;
+    width: 150px;
+    height: 30px;
+  }
+  .header__darc {
+    padding-left: 25px;
+  }
+  .header__mode {
+    width: 20px;
+    height: 20px;
+  }
+  .header__logo {
+    width: 70px;
+    height: 25px;
+    font-size: 14px;
+  }
+  .header__input {
+    height: 30px;
+  }
+  #sarche {
+    font-size: 11px;
+    height: 30px;
+  }
+  .header__search {
+    width: 37px;
+    height: 16px;
+  }
+}
+@media screen and (max-width: 650px) {
+  #icon {
+    padding-right: 20px;
+    width: 110px;
+    height: 25px;
+  }
+  .header__darc {
+    padding-left: 15px;
+    gap: 10px;
+  }
+  .header__mode {
+    width: 20px;
+    height: 20px;
+  }
+  .header__logo {
+    width: 70px;
+    height: 23px;
+    font-size: 12px;
+  }
+  .header__input {
+    height: 30px;
+  }
+  #sarche {
+    font-size: 11px;
+    height: 30px;
+  }
+  .header__search {
+    width: 37px;
+    height: 16px;
+  }
+}
 .main__section {
   margin-top: 2px;
   width: 268px;
@@ -225,7 +317,8 @@ body {
   box-shadow: 0px 3px 2px rgba(0, 0, 0, 0.1);
 }
 
-.offcanvas.show:not(.hiding), .offcanvas.showing {
+.offcanvas.show:not(.hiding),
+.offcanvas.showing {
   width: 552.47px;
 }
 
@@ -351,7 +444,6 @@ body {
 
 .main__cretElement {
   width: 282px;
-  background: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1);
   border-radius: 5px;
   padding: 13px 0 16px 0;
@@ -447,7 +539,7 @@ body {
 }
 
 .offcanvas-header {
-  background: #F8FAFD;
+  background: #f8fafd;
 }
 
 .info__taxt {
@@ -473,7 +565,8 @@ body {
   margin-left: 46.7px;
 }
 
-.info__inner, .info__inner {
+.info__inner,
+.info__inner {
   margin-top: 40px;
 }
 
@@ -486,7 +579,7 @@ body {
   font-weight: 400;
   font-size: 14px;
   line-height: 17px;
-  color: #0D75FF;
+  color: #0d75ff;
 }
 
 .bookmarks__div {
@@ -503,7 +596,7 @@ body {
 .page-item {
   font-size: 20px;
   border-radius: 15px;
-  background: #0D75FF;
+  background: #0d75ff;
   color: #ffffff;
   cursor: pointer;
 }
