--- a/scss/_block/_header.scss
+++ b/scss/_block/_header.scss
@@ -14,6 +14,7 @@ padding-left: 25px;
   align-items: center;
   justify-content: center;
   gap: 19.2px;
+  padding-left: 50px;
 }
 
 .header__mode {
@@ -23,7 +24,8 @@ padding-left: 25px;
 }
 
 #sarche {
-  width: 670px;
+ max-width: 670px;
+ width: 100%;
   height: 48px;
   background: #f8fafd;
   border: none;
@@ -46,6 +48,7 @@ padding-left: 25px;
   align-items: center;
   justify-content: center;
   gap: 20px;
+  width: 100%;
 }
 
 .header__logo {
@@ -83,6 +86,10 @@ padding-left: 25px;
   margin-top: 50px;
   padding-bottom: 10px;
   background: #FFFFFF;
+}
+
+.ul-dark,*{
+  background-color: #fff;
 }
 
 .header__text {
@@ -160,4 +167,105 @@ padding-left: 25px;
 
 .select__div{
   display: flex;
+}
+
+#icon{
+  width: 226px ;
+  height: 44px;
+ padding-right: 56px;
+}
+
+
+
+@media screen and (max-width:850px){
+
+
+  #icon{
+   padding-right: 40px;
+   width: 200px;
+  }
+
+  .header__darc{
+    padding-left: 35px;
+  }
+  .header__mode{
+    width: 25px;
+    height: 25px;
+  }
+  .header__logo{
+    width: 80px;
+    height: 35px;
+    font-size: 14px;
+  }
+}
+@media screen and (max-width:650px){
+
+
+  #icon{
+   padding-right: 30px;
+   width: 150px;
+   height: 30px;
+  }
+
+  .header__darc{
+    padding-left: 25px;
+  }
+  .header__mode{
+    width: 20px;
+    height: 20px;
+  }
+  .header__logo{
+    width: 70px;
+    height: 25px;
+    font-size: 14px;
+  }
+  .header__input{
+    height: 30px;
+  }
+
+  #sarche{
+    font-size: 11px;
+    height: 30px;
+  }
+
+  .header__search{
+    width: 37px;
+    height: 16px;
+  }
+}
+@media screen and (max-width:650px){
+
+
+  #icon{
+   padding-right: 20px;
+   width: 110px;
+   height: 25px;
+  }
+
+  .header__darc{
+    padding-left: 15px;
+    gap: 10px;
+  }
+  .header__mode{
+    width: 20px;
+    height: 20px;
+  }
+  .header__logo{
+    width: 70px;
+    height: 23px;
+    font-size: 12px;
+  }
+  .header__input{
+    height: 30px;
+  }
+
+  #sarche{
+    font-size: 11px;
+    height: 30px;
+  }
+
+  .header__search{
+    width: 37px;
+    height: 16px;
+  }
 }
