--- a/scss/_block/_main.scss
+++ b/scss/_block/_main.scss
@@ -5,7 +5,8 @@
   box-shadow: 0px 3px 2px rgba(0, 0, 0, 0.1);
 }
 
-.offcanvas.show:not(.hiding), .offcanvas.showing {
+.offcanvas.show:not(.hiding),
+.offcanvas.showing {
   width: 552.47px;
 }
 
@@ -97,8 +98,8 @@
   line-height: 21px;
   color: #000000;
   margin-top: 19px;
- height: 44px;
-  overflow:hidden
+  height: 44px;
+  overflow: hidden;
 }
 
 .cretElement__taxt {
@@ -127,14 +128,10 @@
 
 .main__cretElement {
   width: 282px;
-  background: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1);
   border-radius: 5px;
   padding: 13px 0 16px 0;
-
 }
-
-
 
 .main__inner {
   margin-left: 25px;
@@ -222,7 +219,7 @@
 }
 
 .offcanvas-header {
-  background: #F8FAFD;
+  background: #f8fafd;
 }
 
 .info__taxt {
@@ -243,42 +240,42 @@
   line-height: 17px;
   color: #222531;
 }
-.info__div{
- margin-left: 46.7px;
+.info__div {
+  margin-left: 46.7px;
 }
 
-.info__inner ,.info__inner {
+.info__inner,
+.info__inner {
   margin-top: 40px;
 }
 
-.info__span{
+.info__span {
   padding: 11px 20px;
   background: rgba(13, 117, 255, 0.09);
-border-radius: 30px;
-  font-family: 'Rubik';
-font-style: normal;
-font-weight: 400;
-font-size: 14px;
-line-height: 17px;
-color: #0D75FF;
+  border-radius: 30px;
+  font-family: "Rubik";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 17px;
+  color: #0d75ff;
 }
 
-
-.bookmarks__div{
+.bookmarks__div {
   width: 220px;
 }
 
-.pagination{
- justify-content: center;
+.pagination {
+  justify-content: center;
   margin-top: 20px;
   margin-bottom: 30px;
   gap: 5px;
 }
 
-.page-item{
+.page-item {
   font-size: 20px;
   border-radius: 15px;
-  background: #0D75FF;
+  background: #0d75ff;
   color: #ffffff;
   cursor: pointer;
-  }
+}
