--- a/scss/_block/_main.scss
+++ b/scss/_block/_main.scss
@@ -128,6 +128,7 @@
 
 .main__cretElement {
   width: 282px;
+  background-color: #fff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1);
   border-radius: 5px;
   padding: 13px 0 16px 0;
@@ -278,4 +279,354 @@
   background: #0d75ff;
   color: #ffffff;
   cursor: pointer;
+}
+
+@media screen and (max-width: 1300px) {
+  .main {
+    gap: 20px;
+  }
+  #cretElement {
+    gap: 20px;
+  }
+
+  .item {
+    width: 205px;
+    height: 72px;
+  }
+  .main__section {
+    margin-top: 2px;
+    width: 230px;
+  }
+
+  .item__text {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 22px;
+  }
+
+  .main__cretElement {
+    width: 252px;
+    padding: 13px 0 16px 0;
+  }
+  .item__name {
+    width: 130px;
+    font-family: "Noto Sans";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 18px;
+    color: #757881;
+    height: 20px;
+    overflow: hidden;
+  }
+  .main__cretElement__img {
+    width: 229px;
+    margin: 0 auto;
+    height: 213px;
+    border-radius: 5px;
+  }
+
+  .cretElement__inner {
+    font-weight: 400;
+    font-size: 13px;
+    line-height: 20px;
+    margin-top: 16px;
+    height: 44px;
+  }
+
+  .cretElement__taxt {
+    font-weight: 500;
+    font-size: 11px;
+    line-height: 18px;
+    margin-top: 3px;
+  }
+
+  .main__bookmark {
+    width: 100px;
+    height: 37px;
+    font-size: 14px;
+    line-height: 17px;
+    margin-bottom: 5px;
+  }
+  .main__more {
+    width: 100px;
+    height: 37px;
+    border-radius: 4px;
+    font-weight: 500;
+    font-size: 14px;
+  }
+
+  .main__read {
+    width: 231px;
+    height: 37px;
+    border-radius: 4px;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 17px;
+  }
+  .main__btn__more {
+    gap: 3px;
+    justify-content: center;
+    width: 246px;
+  }
+}
+@media screen and (max-width: 1130px) {
+  .main {
+    gap: 20px;
+  }
+  #cretElement {
+    gap: 20px;
+  }
+
+  .item {
+    width: 171px;
+    height: 72px;
+  }
+  .main__section {
+    margin-top: 2px;
+    width: 204px;
+  }
+
+  .item__text {
+    font-weight: 400;
+    font-size: 11px;
+    line-height: 22px;
+    width: 90px;
+  }
+
+  .main__cretElement {
+    width: 210px;
+    padding: 9px 0 9px 0;
+  }
+  .main__section__text {
+    font-family: "Rubik";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    width: 173px;
+  }
+  #item__name {
+    width: 100px;
+    font-size: 10px;
+    line-height: 18px;
+    height: 20px;
+  }
+
+  .img {
+    width: 18px;
+    height: 18px;
+  }
+
+  .bookmarks__div {
+    width: 210px;
+  }
+
+  .item__name {
+    width: 130px;
+    font-family: "Noto Sans";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 18px;
+    color: #757881;
+    height: 20px;
+    overflow: hidden;
+  }
+  .main__cretElement__img {
+    width: 200px;
+    margin: 0 auto;
+    height: 204px;
+    border-radius: 5px;
+  }
+
+  .cretElement__inner {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 18px;
+    margin-top: 12px;
+    height: 37px;
+  }
+
+  .cretElement__taxt {
+    font-weight: 400;
+    font-size: 10px;
+    line-height: 20px;
+    margin-top: 3px;
+  }
+
+  .main__bookmark {
+    width: 95px;
+    height: 29px;
+    font-size: 14px;
+    line-height: -4px;
+    margin-bottom: 5px;
+  }
+  .main__more {
+    width: 95px;
+    height: 29px;
+    font-size: 14px;
+    line-height: -4px;
+    margin-bottom: 5px;
+  }
+
+  .main__read {
+    width: 192px;
+    height: 30px;
+    border-radius: 4px;
+    font-weight: 500;
+    font-size: 15px;
+    line-height: 17px;
+  }
+  .main__btn__more {
+    gap: 3px;
+    justify-content: center;
+    width: 215px;
+  }
+
+  #main__delit__img {
+    display: flex;
+    align-items: center;
+    gap: 3px;
+  }
+}
+@media screen and (max-width: 750px) {
+  .main {
+    gap: 10px;
+  }
+  #cretElement {
+    gap: 20px;
+  }
+
+  .item {
+    width: 144px;
+    height: 68px;
+    padding: 0px 9px 0 5px;
+  }
+  .main__section {
+    margin-top: 2px;
+    width: 160px;
+  }
+
+  .book {
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 28px;
+    margin-top: 27px;
+  }
+
+  .item__text {
+    font-weight: 400;
+    font-size: 11px;
+    line-height: 22px;
+    width: 90px;
+  }
+
+  .main__cretElement {
+    width: 166px;
+    padding: 9px 0 9px 0;
+  }
+  .main__section__text {
+    font-weight: 300;
+    font-size: 10px;
+    width: 130px;
+  }
+  #item__name {
+    width: 88px;
+    font-size: 10px;
+    line-height: 18px;
+    height: 20px;
+  }
+
+  .img {
+    width: 18px;
+    height: 18px;
+  }
+
+  .bookmarks__div {
+    width: 210px;
+  }
+
+  .item__name {
+    width: 130px;
+    font-family: "Noto Sans";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 18px;
+    color: #757881;
+    height: 20px;
+    overflow: hidden;
+  }
+  .main__cretElement__img {
+    width: 164px;
+    margin: 0 auto;
+    height: 175px;
+    border-radius: 5px;
+  }
+
+  .cretElement__inner {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 18px;
+    margin-top: 12px;
+    height: 20px;
+  }
+
+  .cretElement__taxt {
+    font-weight: 400;
+    font-size: 10px;
+    line-height: 20px;
+    margin-top: 3px;
+    height: 27px;
+    overflow: auto;
+  }
+
+  .main__bookmark {
+    width: 79px;
+    height: 27px;
+    font-size: 13px;
+    line-height: -4px;
+    margin-bottom: 5px;
+  }
+  .main__more {
+    width: 79px;
+    height: 27px;
+    font-size: 13px;
+    line-height: -4px;
+    margin-bottom: 5px;
+  }
+
+  .main__read {
+    width: 159px;
+    height: 29px;
+    border-radius: 4px;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 17px;
+  }
+  .main__btn__more {
+    gap: 3px;
+    width: 185px;
+  }
+
+  #main__delit__img {
+    display: flex;
+    align-items: center;
+    gap: 3px;
+  }
+
+  .main__section__container {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .pagination {
+    margin-top: 15px;
+    margin-bottom: 30px;
+    gap: 3px;
+  }
+
+  .page-item {
+    font-size: 13px;
+  }
 }
