--- a/scss/_block/_header.scss
+++ b/scss/_block/_header.scss
@@ -73,9 +73,10 @@
   padding-left: 20px;
 }
 
-.btn:hover {
+.header__logo {
   background-color: blue;
   color: #ffffff;
+  border-radius: 10px;
 }
 
 .header__showing {
