--- a/scss/_block/_addimin.scss
+++ b/scss/_block/_addimin.scss
@@ -173,3 +173,8 @@
   color: #fff;
   padding-left: 10px;
 }
+.admin__header{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
