--- a/scss/_block/_addimin.scss
+++ b/scss/_block/_addimin.scss
@@ -178,3 +178,14 @@
   align-items: center;
   justify-content: space-between;
 }
+
+.header__addimi{
+  height: 40px;
+  width: 85px;
+  border: none;
+  background-color: blue;
+  color: #fff;
+  border-radius: 8px;
+  padding: 0;
+  margin-top: 30px;
+}
