--- a/scss/_block/_main.scss
+++ b/scss/_block/_main.scss
@@ -580,33 +580,35 @@
     height: 27px;
     overflow: auto;
   }
-
+  .section2__div{
+    padding: 0;
+  }
   .main__bookmark {
-    width: 79px;
-    height: 27px;
-    font-size: 13px;
+    width: 62px;
+    height: 22px;
+    font-size: 10px;
     line-height: -4px;
     margin-bottom: 5px;
   }
   .main__more {
-    width: 79px;
-    height: 27px;
-    font-size: 13px;
+    width: 62px;
+    height: 22px;
+    font-size: 10px;
     line-height: -4px;
     margin-bottom: 5px;
   }
 
   .main__read {
-    width: 159px;
-    height: 29px;
+    width: 141px;
+    height: 24px;
     border-radius: 4px;
-    font-weight: 500;
-    font-size: 14px;
+    font-weight: 400;
+    font-size: 13px;
     line-height: 17px;
   }
   .main__btn__more {
     gap: 3px;
-    width: 185px;
+    width: 160px;
   }
 
   #main__delit__img {
@@ -628,5 +630,50 @@
 
   .page-item {
     font-size: 13px;
+  }
+
+  .page-item{
+    text-align: center;
+    width: 20px;
+    border-radius: none;
+    background-color: inherit;
+    padding: 0;
+    margin: 0;
+    font-size: 2px;
+    color: #000000;
+  }
+
+  .pagination{
+    margin:  0;
+    padding: 0;
+    margin-bottom: 30px;
+    margin-top: 20px;
+    gap: 0;
+  }
+}
+
+
+@media screen and (max-width: 400px) {
+  .page-item{
+    text-align: center;
+    width: 15px;
+    border-radius: none;
+    background-color: inherit;
+    padding: 0;
+    margin: 0;
+    font-size: 2px;
+    color: #000000;
+  }
+
+  .pagination{
+    margin:  0;
+    padding: 0;
+    margin-bottom: 30px;
+    margin-top: 20px;
+    gap: 0;
+  }
+
+  .section2__div{
+    padding: 0;
   }
 }
